--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "inputmask": "jquery.inputmask#^4.0.0",
     "bootstrap": "^4.1.1",
     "normalize-strings": "normalize#^1.1.0",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "particles.js": "^2.0.0",
+    "swiper": "^4.3.3"
   }
 }
